--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestWorkManager">
+        <service
+            android:name=".simpleTest.MyWorker"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
-            android:name=".SimpleTestActivity"
+            android:name=".simpleTest.SimpleTestActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
